Effect Image mini refactoring
- Add color filter
- Effect image possible for mse.Sprite

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@ projects/RatGame/images/src4.png
 projects/RatGame/index.php
 
 projects/map1.tmx
+
+projects/Voodoo_Ch4/content.js
+
+projects/Voodoo_Ch4/games/back.jpg
+
+projects/Voodoo_Ch4/images/src1.jpeg
+
+projects/Voodoo_Ch4/images/src2.jpeg
+
+projects/Voodoo_Ch4/images/src0.jpeg
