Config Sprite for mse.Sprite

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,17 @@ projects/Voodoo_Ch4/images/src1.jpeg
 projects/Voodoo_Ch4/images/src2.jpeg
 
 projects/Voodoo_Ch4/images/src0.jpeg
+
+projects/Voodoo_Ch4/games/Bougie.js
+
+projects/Voodoo_Ch4/games/ShootZombie.js
+
+projects/Voodoo_Ch4/games/Sprites.png
+
+projects/Voodoo_Ch4/games/flame.png
+
+projects/Voodoo_Ch4/games/newback.jpg
+
+projects/Voodoo_Ch4/games/zombieback.jpg
+
+projects/Voodoo_Ch4/games/newback_cut.png
