mse.Text with wrap indice '\n'

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,13 @@ projects/Voodoo_Ch4/games/newback.jpg
 projects/Voodoo_Ch4/games/zombieback.jpg
 
 projects/Voodoo_Ch4/games/newback_cut.png
+
+projects/Voodoo_Ch4/images/src10.jpeg
+
+projects/Voodoo_Ch4/images/src11.jpeg
+
+projects/Voodoo_Ch4/images/src12.jpeg
+
+projects/Voodoo_Ch4/images/src13.png
+
+projects/Voodoo_Ch4/images/src18.png
