--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,19 @@ projects/Voodoo_Ch4/images/src12.jpeg
 projects/Voodoo_Ch4/images/src13.png
 
 projects/Voodoo_Ch4/images/src18.png
+
+projects/Voodoo_Ch7/content.js
+
+projects/Voodoo_Ch7/games/Arthuro.png
+
+projects/Voodoo_Ch7/games/Objets.png
+
+projects/Voodoo_Ch7/games/VacheGame.js
+
+projects/Voodoo_Ch7/games/decors.jpg
+
+projects/Voodoo_Ch7/games/vache.png
+
+projects/Voodoo_Ch7/games/fence.png
+
+projects/Voodoo_Ch7/games/oliviera.jpg
