--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ projects/Voodoo_Ch7/games/vache.png
 projects/Voodoo_Ch7/games/fence.png
 
 projects/Voodoo_Ch7/games/oliviera.jpg
+
+projects/Voodoo_Ch1/content.js
