mdj.ObjLayer cachable

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,21 @@ projects/Voodoo_Ch7/games/fence.png
 projects/Voodoo_Ch7/games/oliviera.jpg
 
 projects/Voodoo_Ch1/content.js
+
+projects/Voodoo_Ch10/content.js
+
+projects/Voodoo_Ch10/games/Antoine.png
+
+projects/Voodoo_Ch10/games/Aura.js
+
+projects/Voodoo_Ch10/games/Esprit.png
+
+projects/Voodoo_Ch10/games/b2.jpg
+
+projects/Voodoo_Ch10/games/b1.jpg
+
+projects/Voodoo_Ch10/games/b3.jpg
+
+projects/Voodoo_Ch10/games/b4.jpg
+
+projects/Voodoo_Ch10/games/point-de-vie.png
