Reconstruction of HTTP request to fully support multi language
Resolve bugs

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,7 @@ projects/Voodoo_Ch10/games/b3.jpg
 projects/Voodoo_Ch10/games/b4.jpg
 
 projects/Voodoo_Ch10/games/point-de-vie.png
+
+projects/Test1/content_francais.js
+
+projects/Test1/images/src0.png
