--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,7 @@ projects/Voodoo_Ch10/games/point-de-vie.png
 projects/Test1/content_francais.js
 
 projects/Test1/images/src0.png
+
+Interface.esproj/Project.espressostorage
+
+Interface.esproj/user.panda.espressostorage
