--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ projects/Test1/images/src0.png
 Interface.esproj/Project.espressostorage
 
 Interface.esproj/user.panda.espressostorage
+
+MseInterface.esproj/Project.espressostorage
+
+MseInterface.esproj/user.panda.espressostorage
